<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/white">

        <ImageView
                android:id="@+id/img_item_photo2"
                android:layout_width="145dp"
                android:layout_height="175dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                tools:src="@android:color/darker_gray" />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="false"
                android:layout_toEndOf="@id/img_item_photo2"
                android:layout_toRightOf="@id/img_item_photo2"
                android:orientation="vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <ImageView
                        android:id="@+id/img_rating2"
                        android:layout_width="70dp"
                        android:layout_height="25dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        tools:src="@android:color/darker_gray" />

                <TextView
                        android:id="@+id/tv_item_rating2"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#0C0C0C"
                        android:maxLines="2"
                        tools:text="@string/rating" />
            </LinearLayout>
            <TextView
                    android:id="@+id/tv_item_rating"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:textColor="#0C0C0C"
                    android:layout_height="wrap_content"
                    android:maxLines="10"
                    tools:text="@string/rating_user" />
        </LinearLayout>
    </RelativeLayout>
    <TextView
            android:id="@+id/tv_sinopsis"
            android:textSize="16sp"
            android:textColor="#0C0C0C"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="40"
            tools:text="@string/sinopsis" />
    <TextView
            android:id="@+id/tv_film_detail"
            android:textSize="16sp"
            android:padding="8dp"
            android:textColor="#0C0C0C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="20"
            tools:text="@string/film_detail" />
</LinearLayout>