<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#b3e5fc"
        xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:id="@+id/cvList"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@android:color/white"

                    android:id="@+id/viewer">

                <ImageView
                        android:id="@+id/img_item_photo"
                        android:layout_width="85dp"
                        android:layout_height="105dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        tools:src="@android:color/darker_gray" />
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="false"
                        android:layout_toEndOf="@id/img_item_photo"
                        android:layout_toRightOf="@id/img_item_photo"
                        android:orientation="vertical">
                    <TextView
                            android:id="@+id/tv_item_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:textSize="18sp"
                            android:textColor="#03A9F4"
                            android:textStyle="bold"
                            tools:text="@string/nama_film" />
                    <TextView
                            android:id="@+id/tv_item_detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:ellipsize="end"
                            android:textColor="@android:color/darker_gray"
                            android:maxLines="2"
                            tools:text="@string/detail" />
                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <ImageView
                                android:id="@+id/img_rating"
                                android:layout_width="68dp"
                                android:layout_height="23dp"
                                android:layout_marginEnd="10dp"
                                android:layout_marginRight="10dp"
                                tools:src="@android:color/darker_gray" />

                        <TextView
                                android:id="@+id/tv_item_rating"
                                android:textSize="14sp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLines="2"
                                tools:text="@string/rating" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>